tests/error/bit_cast_padding1.bz
// error: value type '[u8, u16]' and result type 'u32' have incompatible paddings in bit cast
// note: value type has a padding of 1 byte at offset 1, but result type doesn't
function test()
{
	let t: [u8, u16] = [ 0, 0 ];
	let _ = __builtin_bit_cast(u32, t);
}
